--- a/templates/guide.html
+++ b/templates/guide.html
@@ -4,6 +4,7 @@
 {% block description %}{{ headline }}{% endblock %}
 {% block author %}{{ author }}{% endblock %}
 {% block og_title %}{{ title }}{% endblock %}
+{% block og_image %}{% static img_src %}{% endblock %}
 {% block og_description %}{{ headline }}{% endblock %}
 
 {% block content %}
