--- a/templates/base.html
+++ b/templates/base.html
@@ -12,12 +12,14 @@
     <!-- Open Graph tags -->
     <meta property="og:title" content="{% block og_title %}Knownly Community{% endblock %}" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="{% block og_image %}{% static 'img/brand/Knownly_Logo_Bubble_Device_255_x_255.png' %}{% endblock %}" />
     <meta property="og:url" content="https://www.knownly.net/community{% current_page %}" />
     <meta property="og:description" content="{% block og_description %}Get started, learn and teach, grow together.{% endblock %}" />
     <meta property="og:locale" content="en_US" />
+    {% block og-image %}
+    <meta property="og:image" content="{% block og_image %}{% static 'img/brand/Knownly_Logo_Bubble_Device_255_x_255.png' %}{% endblock %}" />
     <meta property="og:image:width" content="255">
     <meta property="og:image:height" content="255">
+    {% endblock %}
     <meta property="og:site_name" content="Knownly Community" />
 
     <title>{% block title %}Knownly Community{% endblock %}</title>
