--- a/static/css/_article.scss
+++ b/static/css/_article.scss
@@ -151,12 +151,12 @@ article {
   }
 
   img {
-    width: 100%;
+    @extend .center-block;
+    @extend .img-responsive;
     max-width: 100%;
-    border-radius: 3px;
   }
 
-  }
+}
 
   #article-meta {
     font-size: 13px;
